Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.0
-
None
-
Windows 8.1 (apparently, other Windowses also)
-
ac8dae8b5eafa07704155dd636d8da2ec21d1c6f
Description
One version of this test is blacklisted on Windows by f3939d943ed.
Locally, processConnection fails with all parameters, but for the good reason - the test tries to check file's existence (socketprocess/socketprocess.exe) and it does not exist (in my case it's in ../socketprocess/socketprocess.exe).
- Test on a real CI Windows machine - if it's the same reason
- Test that all processConnection fail (1/2/5/30 clients) - not clear why only 1 disabled.
- Either apply a trivial fix or find a real reason (and fix it).
Attachments
Issue Links
- replaces
-
QTBUG-27713 Fix insignificant tst_qlocasocket
-
- Closed
-
For Gerrit Dashboard: QTBUG-49254 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
151951,3 | QLocalServer/Win: Fix race condition in listen(). | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |